create table public.challenge_attempts (
  id bigint generated by default as identity not null,
  user_id uuid not null,
  prompt_id bigint not null,
  flag_score real null,
  map_score real null,
  name_score real null,
  constraint challenge_attempts_pkey primary key (id),
  constraint challenge_attempts_user_id_fkey foreign KEY (user_id) references users (id) on update CASCADE on delete CASCADE,
  constraint challenge_attempts_prompt_id_fkey foreign KEY (prompt_id) references challenge_prompts (id),
  unique (user_id, prompt_id)
) TABLESPACE pg_default;

create index challenge_attempts_user_id_idx on public.challenge_attempts (user_id);
create index challenge_attempts_prompt_id_idx on public.challenge_attempts (prompt_id);