create table public.challenge_prompts (
  id bigint generated by default as identity not null,
  challenge_id bigint not null,
  country_id bigint not null,
  prompted_modality text not null,
  position smallint not null,
  constraint challenge_prompts_pkey primary key (id),
  constraint challenge_prompts_challenge_id_fkey foreign KEY (challenge_id) references challenges (id) on update CASCADE,
  constraint challenge_prompts_country_id_fkey foreign KEY (country_id) references countries (id)
) TABLESPACE pg_default;
