create table public.challenges (
  id bigint generated by default as identity not null,
  day date not null default date (now()),
  constraint challenges_pkey primary key (id),
  constraint challenges_day_key unique (day)
) TABLESPACE pg_default;