create table public.countries (
  id bigint generated by default as identity not null,
  code text not null,
  constraint countries_pkey primary key (id),
  constraint countries_code_key unique (code)
) TABLESPACE pg_default;