create table public.learning_rate (
  id bigint generated by default as identity not null,
  user_id uuid not null,
  country_id bigint not null,
  last_checked date not null default date (now()),
  rate real not null default '1'::real,
  constraint learning_rate_pkey primary key (id),
  constraint learning_rate_user_id_fkey foreign KEY (user_id) references users (id) on update CASCADE on delete CASCADE
) TABLESPACE pg_default;
